# dataicer

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-build-test-publish.yml
dataicer/: __init__.py  _base_archive.py  _core.py  _dir_archive.py  _utils.py
dataicer/plugins/: numpy.py  pandas.py  xarray.py
examples/: example_icing.ipynb  example_inbuilt_plugins.py
src/dataicer/: __init__.py  _base_archive.py  _core.py  _dir_archive.py  _errors.py  _pip.py  _utils.py  _zip_archive.py
src/dataicer/plugins/: __init__.py  file.py  numpy.py  pandas.py  xarray.py
tests/: conftest.py  test_core.py  test_dir_archive.py  test_errors.py  test_pip.py  test_plugins_numpy.py  test_plugins_pandas.py  test_plugins_xarray.py  test_utils.py
