
[metadata]
name = dataicer
description = "Ice (save) your data and high level objects for use later."
long_description = "dataicer uses human readable json and plugins to save different classes naturally. It also stores information about the Python instance that saved them so you can always restore your data if you need to."
authors = "Tony Hallam"
author_email = "trhallam@gmail.com"
url="https://github.com/trhallam/dataicer/"

license="MIT"
licence_files=LICENSE

readme = "README.md"

[options]
packages = find:
python_requires = >=3.8
install_requires = 
    jsonpickle

[options.extras_require]
test = pytest; pandas; numpy; xarray; h5netcdf; tables
