
[metadata]
name = dataicer
description = Ice (save) your data and high level objects for use later.
long_description = file:README.md
long_description_content_type = text/markdown
authors = Tony Hallam
author_email = trhallam@gmail.com
url = https://github.com/trhallam/dataicer

license=MIT
licence_files=LICENSE

readme = README.md

[options]
packages = find_namespace:
package_dir =
    =src
python_requires = >=3.8
install_requires =
    jsonpickle

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
    pandas
    numpy
    xarray
    h5netcdf
    tables
